<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:id="@+id/registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_user_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/usuario"
            android:layout_marginBottom="20dp"
            android:maxLength="50">
        </EditText>
        <EditText
            android:id="@+id/et_pass_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:maxLength="50"
            android:layout_marginBottom="20dp">
        </EditText>
        <EditText
            android:id="@+id/et_rpass_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/repita_contrasena"
            android:inputType="textPassword"
            android:maxLength="50"
            android:layout_marginBottom="20dp">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/btn_registro_confirmar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.3"
            android:text="@string/registrarse"
            android:textSize="15dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/btn_registro_cancelar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.3"
            android:text="@string/cancelar"
            android:textSize="15dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="30dp"/>

    </LinearLayout>
</LinearLayout>