<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menu">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="250dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:background="@color/material_dynamic_neutral10"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center_horizontal"></TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btn_proyectos"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/proyectos"
        android:textSize="17dp"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"/>



    <Button
        android:id="@+id/btn_tareasPendientes"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/tareas_pendientes"
        android:textSize="17dp"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btn_miperfil"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/mi_perfil"
        android:textSize="17dp"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="30dp"/>

</LinearLayout>