<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/opciones">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="200dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/opciones"
            android:textColor="@color/white"
            android:background="@color/material_dynamic_neutral10"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="center_horizontal"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_IP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/ip_p_e_127_0_0_1"
            android:layout_marginBottom="20dp"
            android:maxLength="15">
        </EditText>
        <EditText
            android:id="@+id/et_PORT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/puerto_p_e_8080"
            android:inputType="number"
            android:maxLength="5"
            android:layout_marginBottom="20dp">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idioma"
                android:textStyle="bold"
                android:textSize="20dp"
                ></TextView>
            <Spinner
                android:id="@+id/spinner_idioma"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                style="@style/Widget.AppCompat.Spinner"/>

        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/btn_cancelar"
            android:paddingHorizontal="25dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/atras"
            android:textSize="17dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="30dp"/>

        <Button
            android:id="@+id/btn_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/aceptar"
            android:textSize="17dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="70dp">

        <Button
            android:id="@+id/btn_resetPrefs"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/valores_por_defecto"
            android:textSize="17dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="30dp"/>
    </LinearLayout>






</LinearLayout>
