<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tareadetalle">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/tarea"
            android:textColor="@color/white"
            android:background="@color/material_dynamic_neutral10"
            android:textStyle="bold"
            android:textSize="30dp"
            android:gravity="center_horizontal"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tarea"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"
            android:layout_margin="10dp"></TextView>
        <TextView
            android:id="@+id/tvTareaTarea"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/descripcion"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"></TextView>
        <TextView
            android:id="@+id/tvTareaDrescripcion"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/estado"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"></TextView>
        <TextView
            android:id="@+id/tvTareaEstado"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/puntos"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"></TextView>
        <TextView
            android:id="@+id/tvTareaPuntos"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/prioridad"
            android:textStyle="bold"
            android:textSize="25dp"
            android:gravity="left"></TextView>
        <TextView
            android:id="@+id/tvTareaPrioridad"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_iniciarCompletarTarea"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/iniciar_tarea"
            android:textSize="17dp"
            style="@style/Widget.MaterialComponents.Button"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>


</LinearLayout>
